--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Enter <a href="/room/list">ChatRoom</a>.</p>
+    <!-- Using tag helper to go to other pages -->
+    <p>Enter <a asp-controller="Room" asp-action="List">ChatRoom</a>.</p>
 </div>
