--- a/Views/Room/List.cshtml
+++ b/Views/Room/List.cshtml
@@ -8,7 +8,10 @@
     <div>
         @foreach (var room in Model)
         {
-        <div><a href="/room/show/@room.Id ">@room.Name</a></div>
+            <!-- Using tag helper to go to other pages -->
+            <div>
+                @Html.ActionLink(room.Name, "Show", "Room", new { id = room.Id })
+            </div>
         }
     </div>
 </div>
